--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "@iconify/vue": "^4.1.1"
+        "@iconify/vue": "^4.1.1",
+        "1llest-waveform-vue": "^1.2.0",
+        "pinia": "^2.1.7",
+        "vue-material-design-icons": "^5.3.0"
     }
 }
