--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@iconify/vue": "^4.1.1",
+        "@vueuse/core": "^10.9.0",
         "1llest-waveform-vue": "^1.2.0",
         "pinia": "^2.1.7",
         "vue-material-design-icons": "^5.3.0"
