--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@iconify/vue": "^4.1.1",
         "@vueuse/core": "^10.9.0",
         "1llest-waveform-vue": "^1.2.0",
+        "gsap": "^3.12.5",
         "pinia": "^2.1.7",
         "vue-material-design-icons": "^5.3.0"
     }
