--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "1llest-waveform-vue": "^1.2.0",
         "gsap": "^3.12.5",
         "pinia": "^2.1.7",
+        "uuid": "^9.0.1",
         "vue-material-design-icons": "^5.3.0"
     }
 }
